--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </body>
 </html>
